# TorchDR

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  RELEASES.rst  RELEASING.md  affinity_benchmark_report.md  benchmark_affinities_mnist.py  benchmark_affinity_multigpu.py  benchmark_gradient_compression.py  benchmark_gradient_compression_10x.py  check_cellarr_metadata.py  codecov.yml  download_imagenet22k.py  download_imagenet22k.sh  download_imagenet22k_v2.py  download_tahoe_scvi.sbatch  example_angular_distance.py  extract_dinov3_embeddings.sbatch  mnist_largevis_multigpu.py  pyproject.toml  requirements.txt  run_eb_phate_spectral_landmarking.sh  setup.cfg  setup.py  tahoe_scvi_largevis_multigpu.py  test_cellarr_datamodule.py  test_cellarr_simple.py  test_distributed_umap.py
.circleci/: artifact_path  config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: circleci-redirector.yml  flake8.yml  pre-commit.yml  pydocstyle.yml  release.yml  testing.yml
benchmarks/: benchmark_faiss.py  benchmark_faiss_indexes.py  benchmark_umap.py  benchmark_umap_single_cell.py  largevis_10x_multigpu.py  umap_vs_largevis_distributed.py
benchmarks/faiss/: .gitignore  BENCHMARK_RESULTS.md  run_benchmark.py
docs/: Makefile  all.rst  conf.py  make.bat  requirements.txt  torchdr.quick_start.rst
docs/_templates/: module.rst
docs/source/: all.rst  conf.py  index.rst  references.bib  sg_execution_times.rst  torchdr.affinities.rst  torchdr.bibliography.rst  torchdr.contributing.rst  torchdr.neighbor-embedding.rst  torchdr.notation.rst  torchdr.overview.rst  torchdr.quick_start.rst  torchdr.releases.rst  torchdr.user_guide.rst  tp.rst
docs/source/_templates/: class.rst  function.rst  module.rst  myclass_template.rst  myfunc_template.rst
docs/source/js/: pypi-icon.js
docs/source/stubs/: torchdr.Affinity.rst  torchdr.AffinityMatcher.rst  torchdr.DRModule.rst  torchdr.LogAffinity.rst  torchdr.affinity.Affinity.rst  torchdr.affinity.DoublyStochasticEntropic.rst  torchdr.affinity.DoublyStochasticQuadratic.rst  torchdr.affinity.EntropicAffinity.rst  torchdr.affinity.GibbsAffinity.rst  torchdr.affinity.L2SymmetricEntropicAffinity.rst  torchdr.affinity.LogAffinity.rst  torchdr.affinity.ScalarProductAffinity.rst  torchdr.affinity.StudentAffinity.rst  torchdr.affinity.SymmetricEntropicAffinity.rst  torchdr.affinity.UMAPAffinityIn.rst  torchdr.affinity.UMAPAffinityOut.rst  torchdr.affinity_matcher.BatchedAffinityMatcher.rst  torchdr.base.DRModule.rst  torchdr.neighbor_embedding.SNE.rst  torchdr.neighbor_embedding.TSNE.rst
docs/stubs/: torchdr.affinity.Affinity.rst  torchdr.affinity.DoublyStochasticEntropic.rst  torchdr.affinity.EntropicAffinity.rst  torchdr.affinity.GibbsAffinity.rst  torchdr.affinity.L2SymmetricEntropicAffinity.rst  torchdr.affinity.StudentAffinity.rst  torchdr.affinity.SymmetricEntropicAffinity.rst  torchdr.affinity_matcher.AffinityMatcher.rst  torchdr.base.DRModule.rst
examples/: README.rst  cifar10.py  faiss_config_example.py  incremental_pca.py  mnist_distr.py
examples/affinities/: README.rst  demo_ea_adaptivity.py  single_vs_multi_gpu_umap_affinity.py
examples/basics/: demo_TSNE_vs_COSNE.py  demo_dr_methods_affinity_matcher.py  demo_ne_methods_affinity_matcher.py  demo_non_parametric_transform_digits.py  demo_pca_via_affinity_matcher.py  demo_tsne.py  demo_tsne_swiss_roll.py  demo_tsne_vs_cosne.py  pca_via_affinity_matcher.py
examples/distributed/: knn_accuracy_benchmark.py  neighborhood_preservation_benchmark.py
examples/images/: cifar10.py  cifar100.py  faiss_mnist.py  panorama_readme.py
examples/mnist/: panorama_readme.py  test.py
examples/single_cell/: census.py  single_cell_readme.py
torchdr/: __about__.py  __init__.py  affinity_matcher.py  base.py  cli.py  clustering.py  distr.py  eval.py  incremental_pca.py  losses.py  spectral.py
torchdr/affinity/: __init__.py  _base.py  _entropic.py  _quadratic.py  _umap.py  base.py  diffusion.py  entropic.py  geometry.py  kernel.py  knn_normalized.py  multi_gpu.py  pacmap.py  phate.py  projection.py  quadratic.py  simple.py  umap.py  unnormalized.py
torchdr/clustering/: __init__.py  base.py  kmeans.py
torchdr/data/: __init__.py  dataset.py  images.py  single_cell.py  utils.py
torchdr/diffusion_embedding/: __init__.py  phate.py
torchdr/distance/: __init__.py  base.py  faiss.py  keops.py  torch.py
torchdr/distributed/: __init__.py
torchdr/eval/: __init__.py  kmeans.py  knn_labels.py  neighborhood_preservation.py  silhouette.py
torchdr/manifold/: __init__.py  euclidean.py  manifold.py  poincare.py  radam.py
torchdr/neighbor_embedding/: __init__.py  _sne.py  base.py  cosne.py  infotsne.py  largevis.py  largevis_multi_gpu.py  ncsne.py  pacmap.py  sne.py  snekhorn.py  tsne.py  tsnekhorn.py  umap.py
torchdr/spectral_embedding/: __init__.py  distributed_pca.py  exact_incremental_pca.py  incremental_pca.py  kernel_pca.py  pca.py  phate.py
torchdr/tests/: conftest.py  test_affinity.py  test_affinity_batch.py  test_affinity_matcher.py  test_cli.py  test_clustering.py  test_dataloader.py  test_distributed.py  test_distributed_pca.py  test_estimators.py  test_eval.py  test_eval_comprehensive.py  test_incremental_pca.py  test_neighbor_embedding.py  test_parametric.py  test_phate.py  test_phate_stability.py  test_sparse.py  test_spectral.py  test_transform.py  test_utils.py  test_visu.py  utils.py
torchdr/utils/: __init__.py  _geometry.py  _operators.py  _optim.py  _utils.py  _validation.py  _wrappers.py  distributed.py  faiss.py  geometry.py  keops.py  kernel_approx.py  losses.py  manifold.py  operator.py  optim.py  radam.py  root_finding.py  root_search.py  sparse.py  utils.py  validation.py  visu.py  wrappers.py
