[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdr"
description = "Torch Dimensionality Reduction Library"
authors = [
    {name = "Hugues Van Assel", email = "vanasselhugues@gmail.com"},
    {name = " TorchDR contributors"}
]
license = {text = "BSD (3-Clause)"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scikit-learn",
    "torch",
    "tqdm",
]

keywords = [
    "dimensionality reduction",
    "machine learning",
    "data analysis",
    "pytorch",
    "scikit-learn",
    "GPU"
]

classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dynamic = ["version"]

[tool.setuptools]
packages = ["torchdr"]

[tool.setuptools.dynamic]
version = {attr = "torchdr.__about__.__version__"}

[project.urls]
homepage = "https://torchdr.github.io/"
documentation = "https://torchdr.github.io/"
repository = "https://github.com/TorchDR/TorchDR"

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "coverage",
    "numpydoc",
    "pytest-cov",
    "codecov",
    "scipy<=1.13",
]

keops = [
    "pykeops",
]

manifold = [
    "scipy",
    "geoopt>=0.5",
    "matplotlib"
]

dev = [
    "pytest",
    "coverage",
    "numpydoc",
    "pytest-cov",
    "codecov",
    "pykeops",
    "pre-commit",
]

doc = [
    "sphinx",
    "sphinx_gallery",
    "pydata_sphinx_theme",
    "sphinxcontrib-bibtex",
    "matplotlib",
    "numpydoc",
    "memory_profiler",
    "myst-parser",
    "pandas",
    "scipy<=1.13",
    "geoopt>=0.5"
]

examples = [
    "matplotlib",
    "seaborn",
    "pandas",
    "transformers",
    "datasets",
    "datamapplot",
    "scipy<=1.13",
    "geoopt>=0.5"
]

benchmarks = [
    "psutil",
    "requests",
    "umap-learn",
]

all = [
    "torchdr[test,keops,manifold,dev,doc,examples,benchmarks]",
]
